<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:backgroundTint="@color/transparent"
    android:theme="@style/White"
    android:alpha="0.4">

    <TextView
        android:id="@+id/Congrats_Message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/draw_general"
        android:gravity="center_horizontal"
        android:paddingHorizontal="@dimen/text_mh"
        android:paddingVertical="@dimen/text_mv"
        android:singleLine="false"
        android:text="@string/win_message"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.222" />

    <TextView
        android:id="@+id/rows_of_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rows_of_game"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:singleLine="false"
        android:lines="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Congrats_Message"
        app:layout_constraintVertical_bias="0.131" />

    <LinearLayout
        android:id="@+id/statistics_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rows_of_game"
        app:layout_constraintVertical_bias="0.169">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics_title"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:textColor="@color/black">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/games_won_title"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/games_won"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/games_won"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:textColor="@color/black">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/games_played_title"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/games_played"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/games_played"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:textColor="@color/black">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/best_score_title"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/best_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/best_score"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avg_score_title"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/average_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avg_score"
                android:textColor="@color/black" />
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/next_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF0000"
        android:onClick="new_game"
        android:text="@string/play_again_button"
        android:textColor="#FFFFFF"
        app:iconTint="#1E000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statistics_layout"
        app:layout_constraintVertical_bias="0.133"
        tools:ignore="UsingOnClickInXml" />


</androidx.constraintlayout.widget.ConstraintLayout>